--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
     "name": "advent-of-code-2021",
     "version": "1.0.0",
+    "main": "index.js",
+    "type": "module",
     "repository": "git@github.com:evansmal/advent-of-code-2021.git",
     "author": "Evan Smal <evan.smal@hotmail.com>",
     "license": "MIT",
